# ic-factland

./: Cargo.toml  LICENSE  README.md  canister_ids.json  dfx.json  factland.did
backup/: README.md  backup.js  backup_restore.md  package-lock.json  package.json  raw_backup.js  raw_restore.js  restore.js
src/: lib.rs  main.rs
src/declarations/: package.json
src/declarations/factland/: factland.did.d.ts  factland.did.js  index.d.ts  index.js
src/declarations/ic-jury/: ic-jury.did.d.ts  index.d.ts  index.js
