[package]
name = "factland"
version = "0.1.0"
authors = ["John Plevyak <jplevyak@gmail.com>"]
edition = "2021"

[dependencies]
candid = "0.7.15"
hex = "0.4.3"
ic-cdk = "0.5.2"
ic-cdk-macros = "0.5.2"
ic-stable-structures = "0.3"
serde = "1"
serde_bytes = "0.11"
sha2 = "0.10.6"

[profile.release]
debug = false
lto = true
opt-level = 'z'
